# wikipedia_embeded_for_search

./: .env  BEST_PRACTICES.md  README.md  main.py  pyproject.toml  requirements.txt
data/: winter_olypics_2022.csv
